--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-import": "^1.12.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^2.0.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
@@ -53,10 +53,13 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
     "style-loader": "^1.0.0",
     "svg-url-loader": "^3.0.2",
     "terser-webpack-plugin": "^2.1.2",
