--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:dev": "webpack --config webpack/webpack.production.js --progress --colors",
     "build:prod": "webpack --config webpack/webpack.production.js --progress --colors",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "lint:style": "stylelint \"src//*.less\" --syntax less",
-    "prettier": "prettier --write src//*.{js,less,sass,scss}"
+    "lint:js": "eslint --ext .js src --fix",
+    "prettier": "prettier --write src/**/*.{js}"
   },
   "repository": {
     "type": "git",
@@ -51,7 +51,9 @@
     "eslint-plugin-redux-saga": "^1.1.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.9",
     "image-webpack-loader": "^6.0.0",
+    "lint-staged": "^9.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
