--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "core-js": "^2.6.9",
     "dotenv": "^8.1.0",
     "eslint-plugin-react-hooks": "^1.7.0",
