--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "webpack --config webpack/webpack.production.js --progress --colors",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "lint:js": "eslint --ext .js src --fix",
-    "prettier": "prettier --write src/**/*.{js}"
+    "prettier": "prettier --write src/**/*.{js}",
+    "server:dev": "cross-env NODE_ENV=development nodemon server.js",
+    "server:prod": "cross-env NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -75,11 +77,14 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "core-js": "^2.6.9",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.1.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "express": "^4.17.1",
     "formik": "^1.5.8",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
+    "nodemon": "^1.19.4",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
