--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,3 @@
 NODE_ENV=production
-HOST=0.0.0.0
-PORT=3020
-API_DOMAIN=https://squad.id-api-url-prod
+AAPI_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
 API_VERSION=1
