--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Squad.io Frontend",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server  --config webpack/webpack.development.js ",
-    "build:dev": "webpack --config webpack/webpack.production.js --progress --colors",
-    "build:prod": "webpack --config webpack/webpack.production.js --progress --colors",
+    "dev": "NODE_ENV=development webpack-dev-server  --config webpack/webpack.development.js --port 3005  --host 0.0.0.0 --allowed-hosts myDevServerMachine",
+    "build": "NODE_ENV=production webpack --config webpack/webpack.production.js --progress --colors",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "lint:js": "eslint --ext .js src --fix",
-    "prettier": "prettier --write src/**/*.{js}"
+    "lint:style": "stylelint \"src//*.less\" --syntax less",
+    "prettier": "prettier --write src//*.{js,less}"
   },
   "repository": {
     "type": "git",
