--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV=production
-AAPI_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
+API_DOMAIN=http://45.61.48.176:5005
+#AAPI_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
 API_VERSION=1
