--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 NODE_ENV=development
 HOST=0.0.0.0
-PORT=3010
-API_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
+PORT=3005
+API_DOMAIN=http://45.61.48.176:5005
+#API_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
 API_VERSION=1
