--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
       "@babel/preset-env",
       {
         "useBuiltIns": "usage",
+        "corejs": "2.6.10",
         "targets": {
           "browsers": [">1%", "not ie 11", "not op_mini all"]
         }
