[*] GEN - Build adds

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,5 +13,5 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "exclude": ["node_modules", "build", "public"]
+  "exclude": ["node_modules", "build"]
 }
