--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
 NODE_ENV=production
-API_DOMAIN=http://45.61.48.176:5005
-#AAPI_DOMAIN=https://cors-anywhere.herokuapp.com/http://45.61.48.176:5005
+API_DOMAIN=https://squad.api.magora.work
 API_VERSION=1
