--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ server {
 
     location /.well-known {
       try_files $uri $uri/ /ios/apple-app-site-association.json;
+       default_type application/pkcs7-mime;
     }
 
     #error_page  404              /404.html;
