--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@u-wave/react-vimeo": "^0.8.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "core-js": "^2.6.9",
