--- a/nginx.conf
+++ b/nginx.conf
@@ -10,9 +10,17 @@ server {
         try_files $uri /index.html;
     }
 
-    location /.well-known {
-      try_files $uri $uri/ /ios/apple-app-site-association.json;
-       default_type application/pkcs7-mime;
+  
+
+    location =/.well-known/apple-app-site-association.json {
+      allow all;
+      alias /usr/share/nginx/html/ios/apple-app-site-association.json;
+    }
+    
+    location =/.well-known/assetlinks.json {
+      allow all;
+      alias /usr/share/nginx/html/android/assetlinks.json;
+     
     }
 
     #error_page  404              /404.html;
