--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,11 @@ server {
 
   
 
+    location /.well-known/apple-app-site-association {
+      try_files $uri $uri/ /ios/apple-app-site-association.json;
+      default_type application/pkcs7-mime;
+    }
+
     location =/.well-known/apple-app-site-association.json {
       allow all;
       alias /usr/share/nginx/html/ios/apple-app-site-association.json;
