--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.1",
     "react": "^16.10.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-google-login": "^5.0.5",
     "react-helmet": "^5.2.1",
