--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-dom": "^16.10.2",
     "react-google-login": "^5.0.5",
     "react-helmet": "^5.2.1",
+    "react-popper-tooltip": "^2.10.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
