[*] GEN - Changed apple-app-site file

--- a/bin/apple-app-site-association.json
+++ b/bin/apple-app-site-association.json
@@ -9,7 +9,11 @@
         "details": [
             {
                 "appID": "65B5B68C2U.com.magora-team.squad.stage",
-                "paths": [ "/auth/set-password" ]
+                "paths": [ 
+                    "/auth/set-password",
+                    "/team/invite",
+                    "/project/invite"
+                ]
             }
         ]
     }
