--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "classnames": "^2.2.6",
     "core-js": "^2.6.9",
     "cross-env": "^6.0.3",
+    "detect-browser": "^4.8.0",
     "dotenv": "^8.1.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
