--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "@babel/plugin-proposal-export-default-from",
     "add-module-exports",
     "@babel/proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
