--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.1",
     "react": "^16.10.2",
+    "react-cropper": "^1.3.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-google-login": "^5.0.5",
