--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@microsoft/signalr": "^3.1.0",
     "@u-wave/react-vimeo": "^0.8.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
