[*]#SQUAD-323 - Fixed team delete

--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ HOST=0.0.0.0
 PORT=3010
 API_DOMAIN=https://squad.api.magora.work
 #API_DOMAIN=https://cors-anywhere.herokuapp.com/https://squad.api.magora.work
-API_VERSION=1
+API_VERSION=v0.1
