--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
-HOST=0.0.0.0
+HOST=localhost
 PORT=3010
 API_DOMAIN=https://squad.api.magora.work
 #API_DOMAIN=https://cors-anywhere.herokuapp.com/https://squad.api.magora.work
