--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ NODE_ENV=development
 HOST=localhost
 #HOST=0.0.0.0
 PORT=3010
-API_DOMAIN=https://squad.api.magora.work
+API_DOMAIN=http://192.168.2.45:3011/api
+#API_DOMAIN=https://squad.api.magora.work
 #API_DOMAIN=https://cors-anywhere.herokuapp.com/https://squad.api.magora.work
-API_VERSION=v0.1
+API_VERSION=v1
